--- a/src/components/news/news.module.scss
+++ b/src/components/news/news.module.scss
@@ -1,437 +1,467 @@
 .dflex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .headerBackground {
-    background-image: url(/images/recruitment/recruitment1.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 285px;
+  background-image: url(/images/recruitment/recruitment1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 285px;
 }
 
 .introduce {
-    margin-left: 80px;
+  margin-left: 80px;
 
-    .introduceTopCover {
-        width: 100%;
-        height: 140px;
-        padding-top: 35px;
-        justify-content: start;
+  .introduceTopCover {
+    width: 100%;
+    height: 140px;
+    padding-top: 35px;
+    justify-content: start;
 
-        .introduceTitle {
-            h1 {
-                color: #00894f;
-                font-size: 40px;
-                margin-bottom: unset;
-                font-weight: bold;
-                text-transform: uppercase;
-                position: relative;
-
-                &::after {
-                    content: "";
-                    width: 250px;
-                    height: 6px;
-                    background: linear-gradient(to right, #00894f 60%, #8dc63f 40%);
-                    position: absolute;
-                    transform: translate(-50%, -50%);
-                    top: 110%;
-                    left: 40%;
-                }
-            }
-        }
-    }
-
-    .introduceBreadcrumb {
-        text-transform: uppercase;
+    .introduceTitle {
+      h1 {
         color: #00894f;
-        font-weight: 600;
-        font-size: 19px;
+        font-size: 40px;
+        margin-bottom: unset;
+        font-weight: bold;
+        text-transform: uppercase;
+        position: relative;
+
+        &::after {
+          content: '';
+          width: 250px;
+          height: 6px;
+          background: linear-gradient(to right, #00894f 60%, #8dc63f 40%);
+          position: absolute;
+          transform: translate(-50%, -50%);
+          top: 110%;
+          left: 40%;
+        }
+      }
     }
+  }
+
+  .introduceBreadcrumb {
+    text-transform: uppercase;
+    color: #00894f;
+    font-weight: 600;
+    font-size: 19px;
+  }
 }
 
 .newsTime {
-    justify-content: start;
-    margin: 30px 80px 0 80px;
+  justify-content: start;
+  margin: 30px 80px 0 80px;
 
-    .newsTimeIcon {
-        color: #8dc63f;
-        font-size: 16px;
-        margin-right: 5px;
+  .newsTimeIcon {
+    color: #8dc63f;
+    font-size: 16px;
+    margin-right: 5px;
+  }
+
+  p {
+    color: #8dc63f;
+    margin-bottom: unset;
+    font-size: 16px;
+
+    &:nth-child(3) {
+      margin: 0 20px;
     }
+  }
 
-    p {
-        color: #8dc63f;
-        margin-bottom: unset;
-        font-size: 16px;
-
-        &:nth-child(3) {
-            margin: 0 20px;
-        }
-    }
-
-    .newsTimeLine {
-        width: 86%;
-        height: 2px;
-        background: #8dc63f;
-    }
+  .newsTimeLine {
+    width: 86%;
+    height: 2px;
+    background: #8dc63f;
+  }
 }
 
 .newsTimeBody {
-    margin: 10px 80px 0 80px;
+  margin: 10px 80px 0 80px;
 
-    h1 {
-        font-size: 40px;
+  h1 {
+    font-size: 40px;
+    font-weight: bold;
+    color: #00894f;
+    text-transform: uppercase;
+  }
+
+  .recruimentBodyLeft {
+    margin-right: 30px;
+
+    p {
+      color: #606060;
+      font-size: 16px;
+    }
+
+    .newsContent {
+      h2 {
+        color: #8dc63f;
+        font-size: 20px;
+        margin-top: 30px;
         font-weight: bold;
+      }
+    }
+  }
+
+  .recruimentBodyRight {
+    .recruimentBodySearch {
+      background: #e9e9e9;
+      padding: 20px 25px;
+
+      h1 {
         color: #00894f;
+        font-size: 20px;
         text-transform: uppercase;
-    }
-
-    .recruimentBodyLeft {
-        margin-right: 30px;
-
-        p {
-            color: #606060;
-            font-size: 16px;
-        }
-
-        .newsContent {
-            h2 {
-                color: #8dc63f;
-                font-size: 20px;
-                margin-top: 30px;
-                font-weight: bold;
-            }
-        }
-    }
-
-    .recruimentBodyRight {
-        .recruimentBodySearch {
-            background: #E9E9E9;
-            padding: 20px 25px;
-
-            h1 {
-                color: #00894F;
-                font-size: 20px;
-                text-transform: uppercase;
-                font-weight: bold;
-            }
-
-            .searchBox {
-                border-radius: 55px;
-                height: 40px;
-                background: #fff;
-                display: flex;
-                align-items: center;
-
-                .buttonSearch {
-                    font-size: 20px;
-                    cursor: pointer;
-                    padding: 0 15px 0 10px;
-
-                    .btnSearch {
-                        color: #00894f;
-                        transition: all .5s;
-                    }
-
-                    &:hover {
-                        .btnSearch {
-                            color: #8dc63f;
-                        }
-                    }
-                }
-
-                input {
-                    font-size: 16px;
-                    width: 100%;
-                    height: 100%;
-                    border: 0;
-                    background: transparent;
-                    outline: none;
-                    color: #777777;
-                    padding-right: 15px;
-                }
-
-                .searchPlace {
-                    &::placeholder {
-                        color: #777777;
-                        opacity: 1;
-                    }
-                }
-            }
-        }
-
-        .recruimentBodyLastestPost {
-            background: #E9E9E9;
-            padding: 20px 25px;
-            margin-top: 30px;
-
-            h1 {
-                color: #00894F;
-                font-size: 20px;
-                text-transform: uppercase;
-                font-weight: bold;
-            }
-
-            .lastestPostContent {
-                p {
-                    color: #8dc63f;
-                    font-size: 16px;
-                    font-weight: bold;
-                    white-space: nowrap;
-                    width: 100%;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                }
-
-                .lastestPostContent {
-                    height: 2px;
-                    background: #E4E4E4;
-                    margin-bottom: 10px;
-                }
-            }
-        }
-    }
-
-    .rating {
-        margin-top: 60px;
-        justify-content: start;
-
-        .starIcon {
-            color: #00894F;
-            font-size: 21px;
-        }
-
-        p {
-            margin-bottom: unset;
-            color: #606060;
-            font-size: 18px;
-            margin-left: 10px;
-        }
-    }
-
-    .comment {
-        color: #00894F;
-        font-size: 16px;
         font-weight: bold;
-        margin-top: 10px;
+      }
+
+      .searchBox {
+        border-radius: 55px;
+        height: 40px;
+        background: #fff;
+        display: flex;
+        align-items: center;
+
+        .buttonSearch {
+          font-size: 20px;
+          cursor: pointer;
+          padding: 0 15px 0 10px;
+
+          .btnSearch {
+            color: #00894f;
+            transition: all 0.5s;
+          }
+
+          &:hover {
+            .btnSearch {
+              color: #8dc63f;
+            }
+          }
+        }
+
+        input {
+          font-size: 16px;
+          width: 100%;
+          height: 100%;
+          border: 0;
+          background: transparent;
+          outline: none;
+          color: #777777;
+          padding-right: 15px;
+        }
+
+        .searchPlace {
+          &::placeholder {
+            color: #777777;
+            opacity: 1;
+          }
+        }
+      }
     }
 
-    .commentLine {
-        width: 100%;
-        height: 2px;
-        background: #E4E4E4;
+    .recruimentBodyLastestPost {
+      background: #e9e9e9;
+      padding: 20px 25px;
+      margin-top: 30px;
+
+      h1 {
+        color: #00894f;
+        font-size: 20px;
+        text-transform: uppercase;
+        font-weight: bold;
+      }
+
+      .lastestPostContent {
+        p {
+          color: #8dc63f;
+          font-size: 16px;
+          font-weight: bold;
+          white-space: nowrap;
+          width: 100%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
+        .lastestPostContent {
+          height: 2px;
+          background: #e4e4e4;
+          margin-bottom: 10px;
+        }
+      }
     }
+  }
+
+  .rating {
+    margin-top: 60px;
+    justify-content: start;
+
+    .starIcon {
+      color: #00894f;
+      font-size: 21px;
+    }
+
+    p {
+      margin-bottom: unset;
+      color: #606060;
+      font-size: 18px;
+      margin-left: 10px;
+    }
+  }
+
+  .comment {
+    color: #00894f;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 10px;
+  }
+
+  .commentLine {
+    width: 100%;
+    height: 2px;
+    background: #e4e4e4;
+  }
 }
 
 .affiliateProduct {
-    margin-left: 40px;
+  margin-left: 40px;
 
-    .affiliateProductTopCover {
-        padding-top: 35px;
-        justify-content: start;
+  .affiliateProductTopCover {
+    padding-top: 35px;
+    justify-content: start;
 
-        .affiliateProductTitle {
-            h1 {
-                color: #00894f;
-                font-size: 20px;
-                margin-bottom: unset;
-                font-weight: bold;
-                text-transform: uppercase;
-            }
-        }
+    .affiliateProductTitle {
+      h1 {
+        color: #00894f;
+        font-size: 20px;
+        margin-bottom: unset;
+        font-weight: bold;
+        text-transform: uppercase;
+      }
     }
+  }
 }
 
 .carouselProductBackground {
-    margin-top: 30px;
-
-    .productCarousel {
-        margin: 0 25px 0 25px;
-
-        .productCard {
-            text-align: center;
-            margin-bottom: 4rem;
-            box-shadow: 4px 4px 10px -1px #1D4486;
-            width: 75% !important;
-            border-radius: 10px;
-
-            .productCardImage {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                img {
-                    width: 300px;
-                    height: 300px;
-                }
-            }
-
-            h1 {
-                font-size: 20px;
-                font-weight: bold;
-                color: #00894f;
-                margin-top: 10px;
-                margin-bottom: unset;
-            }
-
-            h4 {
-                color: #00894f;
-            }
-        }
-
-        svg {
-            display: none;
-        }
-    }
-}
-
-.customerInformation {
-    background-image: url(/images/customer_information/customer_imformation.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  .productTopCover {
     width: 100%;
-    height: 845px;
+    height: 140px;
 
-    .customerInformationCover {
+    .productTitle {
+      h1 {
+        color: #00894f;
+        font-size: 40px;
+        margin-bottom: unset;
+        font-weight: bold;
+        text-transform: uppercase;
+        position: relative;
+
+        &::after {
+          content: '';
+          width: 190px;
+          height: 6px;
+          background: linear-gradient(to right, #00894f 60%, #8dc63f 40%);
+          position: absolute;
+          transform: translate(-50%, -50%);
+          top: 110%;
+          left: 50%;
+        }
+      }
+    }
+  }
+
+  .productCarousel {
+    margin: 0 25px 0 25px;
+
+    .productCard {
+      text-align: center;
+      margin-bottom: 4rem;
+      margin-top: 4rem;
+      box-shadow: 4px 4px 10px -1px #1d4486;
+      width: 75% !important;
+      border-radius: 10px;
+
+      .productCardImage {
         display: flex;
         align-items: center;
         justify-content: center;
-        flex-direction: column;
-        padding-top: 40px;
 
-        .customerInformationTop {
-            .customerInformationTopCover {
-                position: relative;
-
-                .customerInformationTitle {
-                    width: 700px;
-                    text-align: center;
-
-                    h1 {
-                        color: #fff;
-                        font-size: 45px;
-                        margin-bottom: unset;
-                        font-weight: bold;
-                        text-transform: uppercase;
-                        position: relative;
-
-                        &::after {
-                            content: "";
-                            width: 280px;
-                            height: 6px;
-                            background: linear-gradient(to right, #00894f 50%, rgb(255, 255, 255) 50%);
-                            position: absolute;
-                            transform: translate(-50%, -50%);
-                            top: 120%;
-                            left: 50%;
-                        }
-                    }
-                }
-            }
+        img {
+          width: 100%;
+          height: 300px;
         }
+      }
 
-        .customerInformationCenter {
-            margin-top: 40px;
+      h1 {
+        font-size: 20px;
+        font-weight: bold;
+        color: #00894f;
+        margin-top: 10px;
+      }
 
-            p {
-                margin-bottom: unset;
-                font-size: 18px;
-            }
-        }
-
-        .customerInformationBottom {
-            margin: 30px 0;
-            flex-direction: column;
-            gap: 20px;
-
-            input {
-                width: 55rem;
-                height: 50px;
-                background-color: #fff;
-                padding: 10px 20px;
-                font-size: 18px;
-                color: #00894F;
-            }
-
-            .styleTextArea {
-                width: 55rem;
-                background-color: #fff;
-                padding: 10px 20px;
-                font-size: 18px;
-                color: #000;
-                max-width: unset;
-            }
-
-            .btn_see_more {
-                margin-top: 3rem;
-
-                button {
-                    background: linear-gradient(to right, #8dc63f, #00894f);
-                    width: 220px;
-                    height: 35px;
-                    border-radius: 20px;
-                    justify-content: space-around;
-                    cursor: pointer;
-
-                    p {
-                        font-size: 16px;
-                        font-weight: bold;
-                        text-transform: uppercase;
-                        margin-bottom: unset !important;
-                        color: #fff;
-                    }
-
-                    .iconBtn {
-                        font-size: 18px;
-                        color: #fff;
-                    }
-                }
-            }
-        }
+      h4 {
+        color: #00894f;
+      }
     }
+
+    svg {
+      display: none;
+    }
+  }
+}
+
+.customerInformation {
+  background-image: url(/images/customer_information/customer_imformation.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 845px;
+
+  .customerInformationCover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 40px;
+
+    .customerInformationTop {
+      .customerInformationTopCover {
+        position: relative;
+
+        .customerInformationTitle {
+          text-align: center;
+
+          h1 {
+            color: #fff;
+            font-size: 45px;
+            margin-bottom: unset;
+            font-weight: bold;
+            text-transform: uppercase;
+            position: relative;
+
+            &::after {
+              content: '';
+              width: 280px;
+              height: 6px;
+              background: linear-gradient(
+                to right,
+                #00894f 50%,
+                rgb(255, 255, 255) 50%
+              );
+              position: absolute;
+              transform: translate(-50%, -50%);
+              top: 120%;
+              left: 50%;
+            }
+          }
+        }
+      }
+    }
+
+    .customerInformationCenter {
+      margin-top: 40px;
+
+      p {
+        margin-bottom: unset;
+        font-size: 18px;
+      }
+    }
+
+    .customerInformationBottom {
+      margin: 30px 0;
+      flex-direction: column;
+      gap: 20px;
+
+      input {
+        width: 50rem;
+        height: 50px;
+        background-color: #fff;
+        padding: 10px 20px;
+        font-size: 18px;
+        color: #000;
+      }
+
+      .styleTextArea {
+        width: 55rem;
+        background-color: #fff;
+        padding: 10px 20px;
+        font-size: 18px;
+        color: #000;
+        max-width: unset;
+      }
+
+      .btn_see_more {
+        margin-top: 3rem;
+
+        button {
+          background: linear-gradient(to right, #8dc63f, #00894f);
+          width: 220px;
+          height: 35px;
+          border-radius: 20px;
+          justify-content: space-around;
+          cursor: pointer;
+
+          p {
+            font-size: 16px;
+            font-weight: bold;
+            text-transform: uppercase;
+            margin-bottom: unset !important;
+            color: #fff;
+          }
+
+          .iconBtn {
+            font-size: 18px;
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 768px) {
-    .introduce {
-        margin-left: 15px;
+  .introduce {
+    margin-left: 15px;
+  }
+
+  .newsTime {
+    margin: 20px 20px 0 20px;
+
+    .newsTimeLine {
+      width: 45%;
     }
+  }
 
-    .newsTime {
-        margin: 20px 20px 0 20px;
+  .newsTimeBody {
+    margin: 10px 10px 0 10px;
+  }
 
-        .newsTimeLine {
-            width: 45%;
-        }
-    }
-
-    .newsTimeBody {
-        margin: 10px 10px 0 10px;
-    }
-
-    .customerInformation {
-        .customerInformationCover {
-            .customerInformationTop {
-                .customerInformationTopCover {
-                    .customerInformationTitle {
-                        h1 {
-                            font-size: 31px;
-                        }
-                    }
-                }
+  .customerInformation {
+    .customerInformationCover {
+      .customerInformationTop {
+        .customerInformationTopCover {
+          .customerInformationTitle {
+            h1 {
+              font-size: 31px;
             }
-
-            .customerInformationBottom {
-
-                input,
-                .styleTextArea {
-                    width: 28rem;
-                }
-            }
+          }
         }
+      }
+
+      .customerInformationBottom {
+        input {
+          width: 24rem;
+        }
+
+        .styleTextArea {
+          width: 27rem;
+        }
+      }
     }
+  }
 }
